--- a/Khareedloo/src/app/components/dashboard/dashboard.component.html
+++ b/Khareedloo/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,1 @@
-<p>dashboard works!</p>
-<p>dashboard works!</p>
-<p>dashboard works!</p>
-<p>dashboard works!</p>
-<p>dashboard works!</p>
-<p>dashboard works!</p>
-<p>dashboard works!</p>
-<p>dashboard works!</p><p>dashboard works!</p>
-<p>dashboard works!</p>
-<p>dashboard works!</p>
+<app-carousel></app-carousel>
