--- a/Khareedloo/src/app/components/navbar/navbar.component.html
+++ b/Khareedloo/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,26 @@
-<p>navbar works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3">
+            <div class="sidemenu">
+                <h6>
+                    <i class="fa fa-bars mr-2" aria-hidden="true"></i>
+                    <span>categories</span>
+                </h6>
+
+            </div>
+        </div>
+        <div class="col-lg-9">
+            <div class="mainmenu">
+                <nav class="navbar navbar-expand-sm navbar-light ">
+                    <ul class="navbar-nav ">
+                      <li class="nav-item mr-5"><a  class="nav-link"  href="#" >SELL </a></li>
+                      <li class="nav-item mr-5"><a  class="nav-link" href="#" >OFFERS</a></li>
+                      <li class="nav-item mr-5"> <a  class="nav-link" href="#" >CONTACT US</a></li>
+                    </ul>
+                  </nav>
+            </div>
+        </div>
+
+    </div>
+
+</div>
