--- a/Khareedloo/src/app/components/myaccount/myaccount.component.html
+++ b/Khareedloo/src/app/components/myaccount/myaccount.component.html
@@ -1,28 +1,82 @@
 <div class="container ">
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 flexer">
-            <div class="card">
-                <div class="card-body"> 
-                    <h1 class="text-center pb-4 pt-3"> 
+            <div class="card ">
+                <div class="card-body">
+                    <h1 class="text-center pb-4 pt-3">
                         <span class="text-dark"><i class="fa fa-unlock fa-fw"></i>Login:</span></h1>
-                        <form (submit)="onSubmit()">
-                            <div class="form-group">
-                              <label for="email">Email</label>
-                              <input type="email" name="email" [(ngModel)]="email" class="form-control" required>
-                              <label for="password">Password</label>
-                                <input type="password" name="password" [(ngModel)]="password" class="form-control" required>
-                            </div>
-                            <input type="submit" value="Login" [disabled] ="email ==''|| password == ''" class="btn btn-purple btn-block">
-                          </form>
+                    <form (submit)="onSubmit()">
+                        <div class="form-group">
+                            <label for="email" class="mt-1">Email</label>
+                            <input type="email" name="email" [(ngModel)]="email" class="form-control mb-sm-3 shadow-none" required>
+                            <label for="password">Password</label>
+                            <input type="password" name="password" [(ngModel)]="password" class="form-control shadow-none" required>
+                        </div>
+                        <input type="submit" value="Login" [disabled]="email ==''|| password == ''"
+                            class="btn btn-purple btn-block ">
+                    </form>
                 </div>
-                
+
             </div>
 
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 flexer">
             <div class="card">
                 <div class="card-body">
-                    <h1 class="text-center pb-4 pt-3">  <span class="text-dark"><i class="fa fa-lock fa-fw"></i>Register:</span></h1>
+                    <h1 class="text-center pb-4 pt-3"> <span class="text-dark"><i
+                                class="fa fa-lock fa-fw"></i>Register:</span></h1>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                            <div class="form-group ">
+                                <label>Full Name</label>
+                                <div class="input-group"><input type="text"  class="form-control shadow-none"
+                                        name="name" maxlength="25" placeholder="Full Name*"
+                                        aria-required="true">
+                                    <div class="input-group-prepend"><span class="input-group-text"
+                                            id="inputGroupPrepend"><i class="fa fa-user"></i></span></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                            <div class="form-group ">
+                                <label>Mobile Number</label>
+                                <div class="input-group"><input type="text" class="form-control shadow-none"
+                                        name="phone" maxlength="12"
+                                        placeholder="03xx-xxxxxxx" aria-required="true">
+                                    <div class="input-group-prepend"><span class="input-group-text"
+                                            id="inputGroupPrepend"><i class="fa fa-mobile"></i></span></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                            <div class="form-group ">
+                                <label>Email Address</label>
+                                <div class="input-group"><input type="email" 
+                                        class="form-control shadow-none" name="email" 
+                                        placeholder="Email Address*" aria-required="true" d-place="Email Address*">
+                                    <div class="input-group-prepend"><span class="input-group-text"
+                                            id="inputGroupPrepend"><i class="fa fa-envelope"></i></span></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                            <div class="form-group">
+                                <label>Password</label>
+                                <div class="input-group "><input type="password"
+                                        class="form-control shadow-none" name="password" placeholder="Password*"
+                                        aria-required="true">
+                                    <div class="input-group-prepend"><span class="input-group-text"
+                                            id="inputGroupPrepend"><i class="fa fa-lock"></i></span></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-purple btn-block mt-1">Register</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
