--- a/Khareedloo/src/app/components/navbar/navbar.component.css
+++ b/Khareedloo/src/app/components/navbar/navbar.component.css
@@ -1,13 +1,9 @@
 .sidemenu{
-    color: white;
     background-color: #323edd;
-    text-transform: uppercase;
     border-radius: 8px;
-    padding: 15px;
     position: relative;
     top: -17px;
-    width: 250px;
-    cursor: pointer;
+    
 }
 .mainmenu{
     
@@ -23,3 +19,12 @@
 .mainmenu a:hover {
     color:#323edd;
   }
+.btn{
+    color: white;
+    text-transform: uppercase;
+    padding-right: 90px;
+    
+}
+.dropdown-menu{
+    width: 100%;
+}
