work on admin panel

--- a/Khareedloo/src/app/components/footer/footer.component.html
+++ b/Khareedloo/src/app/components/footer/footer.component.html
@@ -52,3 +52,5 @@
         </div>
     </div>
    </footer>
+
+   <h2 [routerLink]="['admin/panel']" routerLinkActive="router-link-active" >Check</h2>
