--- a/Khareedloo/src/app/components/header/header.component.css
+++ b/Khareedloo/src/app/components/header/header.component.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
+
+
+
 i.fa {
     /* display: inline-block; */
     border-radius: 100px;
