--- a/Khareedloo/src/app/app.component.html
+++ b/Khareedloo/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-header></app-header>
-<app-navbar></app-navbar>
+<app-header *ngIf="false"></app-header>
+<app-navbar *ngIf="false"></app-navbar>
+<!-- <app-nav-bar *ngIf="true"></app-nav-bar> -->
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer *ngIf="false"></app-footer>
