--- a/Khareedloo/src/app/components/admin/categories/categories.component.html
+++ b/Khareedloo/src/app/components/admin/categories/categories.component.html
@@ -1,58 +1,96 @@
-
-<div class=" container-fluid mainpanel ">
-<div class="content-wrapper p-4">
-    <div class="row mb-4">
-        <div class="col">
-            <div class="pagetitle ">Categories</div>
-        </div>
-        <div class="col">
-            <div class="option">
-                <div class="search-block mr-3">
-                    <div class="input-group ">
-                        <input class="form-control p-3 shadow-none" type="search" placeholder="Search">
-                        <div class="input-group-append">
-                            <button class="search-button " type="submit">
-                                <i id="search-icon"class=" fa fa-search fa-1x"></i>
-                            </button>
+<div class=" container mainpanel ">
+    <div class="content-wrapper p-3">
+        <div class="row mb-4">
+            <div class="col">
+                <div class="pagetitle ">Categories</div>
+            </div>
+            <div class="col">
+                <div class="option">
+                    <div class="search-block mr-3">
+                        <div class="input-group  ">
+                            <input class=" serach form-control p-3 shadow-none" type="search" placeholder="Search">
+                            <div class="input-group-append">
+                                <button class="search-button " type="submit">
+                                    <i id="search-icon" class=" fa fa-search fa-1x"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class=" mr-3">
-                    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                       Add New
-                      </button>
-                      
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card ">
-        <div class="collapse" id="collapseExample">
-            <div class="card card-body">
-                <h1 class="text-center pb-4 pt-3">
-                    <span class="text-dark">Add Category</span></h1>
-                <form>
-                    <div class="form-group ">
-                        <label for="email" class="mt-1">Category Name</label>
-                        <input type="email" name="email" class="form-control mb-sm-3 shadow-none"
-                            required>
-                        <label for="password">Password</label>
-                        <input type="password" name="password" class="form-control shadow-none"
-                            required>
+                    <div class=" mr-3">
+                        <button class="btn btn-primary" type="button" data-toggle="collapse"
+                            data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                            Add New
+                        </button>
+
                     </div>
-                    <input type="submit" value="Add" 
-                        class="btn btn-primary btn-block ">
-                </form>
-            </div>
-          </div>
-        <div class="card-body">
-            <div class="row">
-                <div class="col-lg-3 col-sm-6 col-xs-12 item_holder" *ngFor="let item of categories">
-                    <a > {{item.list}}</a>
                 </div>
             </div>
-            
+        </div>
+        <div class="card ">
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    <h2 class=" pb-4 pt-3">
+                        <span class="text-dark">Add Category</span></h2>
+                    <form>
+
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-2 col-form-label">Category Name</label>
+                            <div class="col-sm-5 ">
+                                <input type="text" #cat class="form-control" id="category" placeholder="Enter Category Name">
+                            </div>
+
+                        </div>
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-2 col-form-label">Image Url</label>
+                            <div class="col-sm-5">
+                                <input type="url" #img class="form-control" id="category" placeholder="Enter Image Url">
+                            </div>
+                        </div>
+                        <button (click)="addcategory(cat,img)" type="submit" class="btn btn-primary">Save</button>
+                    </form>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-6 col-xs-12 " *ngFor="let item of categories index as i">
+                        <div class="card mb-5" style="width: 15rem;">
+                            <img class="card-img-top" src="{{item.image}}" height="150 !important">
+                            <div class="card-footer bg-transparent ">{{item.list}} 
+                                <ul class="list-inline-item float-right ">
+                                    <li class="list-inline-item pr-3"><a ><i class="fa fa-edit "></i></a> </li>
+                                    <li class="list-inline-item pr-3"><a (click)="indexcategory(i)" data-toggle="modal" data-target="#exampleModalCenter" >
+                                        <i  class="fa fa-trash "></i>
+                                    </a>                                        
+                                    
+                                      <!-- Modal -->
+                                      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered" role="document">
+                                          <div class="modal-content">
+                                            <div class="modal-header">
+                                              <h5 class="modal-title" id="exampleModalLongTitle">Are you sure ?</h5>
+                                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                              </button>
+                                            </div>
+                                            <div class="modal-body " >
+                                                Your sub-category and products will be deleted which belong to this !
+                                                
+                                            </div>
+                                            <div class="modal-footer">
+                                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                              <button (click)="removecategory(indexitem)" type="button" class="btn btn-primary" data-dismiss="modal">Delete</button>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div> </li>
+                                </ul>
+                                
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+
+            </div>
         </div>
     </div>
-</div>
 </div>
