--- a/Khareedloo/src/app/components/admin/panel/panel.component.html
+++ b/Khareedloo/src/app/components/admin/panel/panel.component.html
@@ -20,6 +20,13 @@
                    
                  </div>
              </a>
+             <a [routerLink]="['/admin/banner']" routerLinkActive="router-link-active" class="list-group-item list-group-item-action flex-column align-items-start">
+                <div class="d-flex w-100 justify-content-start align-items-center">
+                    <span class="fa fa-picture-o fa-fw mr-3"></span> 
+                    <span class="menu-collapsed">Banner</span>
+                  
+                </div>
+            </a>
              <li class="list-group-item">
                 <small>Products</small>
             </li>
