database connect on Users

--- a/Khareedloo/src/app/app.component.html
+++ b/Khareedloo/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-header *ngIf="true"></app-header>
-<app-navbar *ngIf="true"></app-navbar>
+<app-header *ngIf="false"></app-header>
+<app-navbar *ngIf="false"></app-navbar>
 <!-- <app-nav-bar *ngIf="true"></app-nav-bar> -->
 <router-outlet></router-outlet>
 <app-footer *ngIf="false"></app-footer>
