--- a/Khareedloo/src/app/components/admin/categories/categories.component.css
+++ b/Khareedloo/src/app/components/admin/categories/categories.component.css
@@ -31,22 +31,43 @@
   border-bottom-right-radius: 20px;    
   background-color: white;  
 }
-.item_holder{
-  background-color: rgb(59, 83, 218);
-  width: 100%;
-  height: 150px;
-  margin-bottom: 30px;
-  margin-left: 50px;
-  
-  border-radius: 10px;
-}
-label{
-  font-weight: 500;
-}
+
 
 
 .card-footer{
   height: 45px !important;
+  font-family: sans-serif;
+  text-align: center;
+  color: white;
+  background-color:rgba(34, 49, 63, 1) !important;
+}
+.modal-content{
+  color: black;
+  
+}
+.fa{
+  cursor: pointer;
+  
+
+}
+.icon li :hover{
+  color: black;
+ 
+  
 }
 
+.icon {
+  position: relative;
+  top:44px;
+  left: 3px;
+background-image: linear-gradient(to bottom,rgba(255, 0, 0, 0),rgba(0, 0, 0, 1));
+z-index: 1;
+height: 27px;
+color: white;
+width: 235px;
+
+}
+.modal{
+  z-index: 100px;
+}
 
