--- a/Khareedloo/src/app/components/myaccount/myaccount.component.html
+++ b/Khareedloo/src/app/components/myaccount/myaccount.component.html
@@ -8,11 +8,11 @@
                     <form (submit)="onSubmit()">
                         <div class="form-group">
                             <label for="email" class="mt-1">Email</label>
-                            <input type="email" name="email" [(ngModel)]="email" class="form-control mb-sm-3 shadow-none" required>
+                            <input type="email" name="email"  class="form-control mb-sm-3 shadow-none" required>
                             <label for="password">Password</label>
-                            <input type="password" name="password" [(ngModel)]="password" class="form-control shadow-none" required>
+                            <input type="password" name="password"  class="form-control shadow-none" required>
                         </div>
-                        <input type="submit" value="Login" [disabled]="email ==''|| password == ''"
+                        <input type="submit" value="Login" 
                             class="btn btn-purple btn-block ">
                     </form>
                 </div>
@@ -42,8 +42,8 @@
                             <div class="form-group ">
                                 <label>Mobile Number</label>
                                 <div class="input-group"><input type="text" class="form-control shadow-none"
-                                        name="phone" maxlength="12"
-                                        placeholder="03xx-xxxxxxx" aria-required="true">
+                                        name="phone" maxlength="13"
+                                        placeholder="+92xxxxxxxxx" aria-required="true">
                                     <div class="input-group-prepend"><span class="input-group-text"
                                             id="inputGroupPrepend"><i class="fa fa-mobile"></i></span></div>
                                 </div>
