--- a/Khareedloo/src/app/components/admin/products/products.component.html
+++ b/Khareedloo/src/app/components/admin/products/products.component.html
@@ -1,1 +1,119 @@
-<p>products works!</p>
+<div class=" container mainpanel ">
+    <div class="content-wrapper p-3">
+        <div class="row mb-4">
+            <div class="col">
+                <div class="pagetitle ">Products</div>
+                
+                
+            </div>
+            <div class="col">
+                <div class="option">
+                    <div class="search-block mr-3">
+                        <div class="input-group  ">
+                            <input class=" serach form-control p-3 shadow-none" type="search" placeholder="Search">
+                            <div class="input-group-append">
+                                <button class="search-button " type="submit">
+                                    <i id="search-icon" class=" fa fa-search fa-1x"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" mr-3">
+                        <button class="btn btn-primary" type="button" data-toggle="collapse"
+                            data-target="#collapse" aria-expanded="false" aria-controls="collapse">
+                            Add New
+                        </button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card" >
+            <div class="collapse" id="collapse">
+                <div class="card card-body">
+                    <h2 class=" pb-4 pt-3">
+                        <span class="text-dark">Add Products</span></h2>
+                        
+                    <form (ngSubmit)="onAddProduct(productForm.value)" #productForm="ngForm">
+                        
+                        <div class="form-group row"  >
+                            <label for="colFormLabel" class="col-sm-2 col-form-label">Category Name</label>
+                            <div class="col-sm-5 "  >
+                                <select class="form-control" ngModel name="category" >
+                                    <option [ngValue]="item" *ngFor="let item of categories">{{item.name}}</option>
+                                </select>                         
+                            </div>
+                        </div>
+                        
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-2 col-form-label">Sub-Category Name</label>
+                            <div class="col-sm-5 ">
+                                <select class="form-control" ngModel name="category" >
+                                    <option [ngValue]="item" *ngFor="let item of categories">{{item.name}}</option>
+                                </select> 
+                            </div>
+                            
+                        </div>
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-2 col-form-label">Product Name</label>
+                            <div class="col-sm-5 ">
+                                <input type="text"  class="form-control" id="name" placeholder="Enter Product Name"
+                                name="name" ngModel required> 
+                            </div>
+
+                        </div>
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-2 col-form-label">Image Url</label>
+                            <div class="col-sm-5">
+                                <input type="url"  class="form-control" placeholder="Enter Image Url"
+                                name="image" ngModel required>
+                            </div>
+                        </div>
+                        <button  type="submit" class="btn btn-primary" >Save</button>
+                    </form>
+                </div>
+            </div>
+            <div class="card-body pt-0" >
+                <div class="row" >
+                    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-12 " *ngFor="let subcategory of subcategories" >
+                        <div class="icon">
+                            <ul class="list-inline-item float-right pr-2 ">
+                                <li class="list-inline-item pr-2"><a (click)="onEdit(subcategory)"><i class="fa fa-edit "></i></a> </li>
+                                <li class="list-inline-item pr-2"><a data-toggle="modal" data-target="#ModalCenter" >
+                                    <i  class="fa fa-trash "></i> </a>                                        
+                                   </li>
+                            </ul>
+                        </div>
+                        <!-- Modal -->
+                        <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title" id="ModalLongTitle">Are you sure ?</h5>
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                  </button>
+                                </div>
+                                <div class="modal-body " >
+                                    Your  products will be deleted which belong to this !
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                  <button  (click)="onDeleteById(subcategory)" type="button" class="btn btn-primary" data-dismiss="modal">Delete</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                         
+                        <div class="card mb-2" style="width: 15rem;" >
+                            <div class="card-header bg-transparent" > {{subcategory.category.name}}</div>
+                            <img class="card-img-top" src="{{subcategory.image}}" height="150 !important" >
+                            <div class="card-footer bg-transparent"> {{subcategory.name}} </div>
+                           
+                          </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+</div>
