--- a/Khareedloo/src/app/components/header/header.component.html
+++ b/Khareedloo/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
             </div>   
             <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
                 <div class="btn-group ">
-                <button class="btn mr-2 shadow-none" [routerLink]="['/myaccount']"  ><i class="fa fa-user-circle fa-2x "></i>
+                <button class="btn mr-2 shadow-none" [routerLink]="['/account']" routerLinkActive="active" ><i class="fa fa-user-circle fa-2x "></i>
                 </button>
                 <button class="btn mr-2 shadow-none" [routerLink]="['/']"  ><i class="fa fa-shopping-cart fa-2x "></i>
                 </button>
