--- a/Khareedloo/src/app/components/admin/users/users.component.html
+++ b/Khareedloo/src/app/components/admin/users/users.component.html
@@ -3,8 +3,7 @@
         <div class="row mb-4">
             <div class="col">
                 <div class="pagetitle ">Users</div>
-                <h1><p>Today is {{today |date}}</p>
-                    </h1>
+                <!-- <h1><p>Today is {{chk}}</p></h1> -->
             </div>
             <div class="col">
                 <div class="option">
@@ -35,39 +34,58 @@
                     <span class="text-dark">Add Users</span></h2>
                 <form (ngSubmit)="onAddUser(userForm.value)" #userForm="ngForm">
                     <div class="form-group row">
-                        <label for="colFormLabel" class="col-sm-2 col-form-label">Name</label>
-                        <div class="col-sm-5 ">
-                            <input type="text"  class="form-control"placeholder="Enter Name"
-                            name="name" ngModel>
+                        <label for="colFormLabel" class="col-md-2 col-form-label">First Name</label>
+                        <div class="col-md-4 ">
+                            <input type="text"  class="form-control"placeholder="Enter First Name"
+                            name="first_Name" ngModel>
+                        </div>
+                        <label for="colFormLabel" class="col-md-2 col-form-label">Last Name</label>
+                        <div class="col-md-4 ">
+                            <input type="text"  class="form-control"placeholder="Enter Last Name"
+                            name="last_Name" ngModel>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
-                        <div class="col-sm-5 ">
+                        <label for="colFormLabel" class="col-md-2 col-form-label">Email</label>
+                        <div class="col-md-4 ">
                             <input type="email"  class="form-control"  placeholder="Enter Email Name"
                             name="email" ngModel>
                         </div>
+                        <label for="colFormLabel" class="col-md-2 col-form-label">Password</label>
+                        <div class="col-md-4 ">
+                            <input type="password"  class="form-control"placeholder="Enter Password" 
+                            name="password" ngModel>
+                        </div>
                     </div>
                     <div class="form-group row">
-                        <label for="colFormLabel" class="col-sm-2 col-form-label">Contact No.</label>
-                        <div class="col-sm-5 ">
+                        <label for="colFormLabel" class="col-md-2 col-form-label">Contact No.</label>
+                        <div class="col-md-4 ">
                             <input type="text"  class="form-control"  placeholder="Enter Contact No." 
                             name="contactNo" ngModel>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="colFormLabel" class="col-sm-2 col-form-label">Password</label>
-                        <div class="col-sm-5 ">
-                            <input type="password"  class="form-control"placeholder="Enter Password" 
-                            name="password" ngModel>
+                        <label for="colFormLabel" class="col-md-2 col-form-label">City</label>
+                        <div class="col-md-4 ">
+                            <input type="text"  class="form-control"  placeholder="Enter City" 
+                            name="city" ngModel>
                         </div>
-                        
+                        <label for="colFormLabel" class="col-md-2 col-form-label">Postal Code</label>
+                        <div class="col-md-4 ">
+                            <input type="text"  class="form-control"  placeholder="Enter Postal Code" 
+                            name="zip" ngModel>
+                        </div>
                     </div>
                     <div class="form-group row">
-                        <label for="colFormLabel" class="col-sm-2 col-form-label">Address</label>
-                        <div class="col-sm-5 ">
+                        <label for="colFormLabel" class="col-md-2 col-form-label">Address</label>
+                        <div class="col-md-4 ">
                             <input type="text"  class="form-control"  placeholder="Enter Address"
                             name="address" ngModel>
+                        </div>
+                        <label for="colFormLabel" class="col-md-2 col-form-label">Second Address</label>
+                        <div class="col-md-4 ">
+                            <input type="text"  class="form-control"  placeholder="Enter Second Address"
+                            name="address2" ngModel>
                         </div>
                     </div>
                     <button  type="submit" class="btn btn-primary" >Add</button>
@@ -81,7 +99,8 @@
             <thead class="thead-dark">
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">Name</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
                 <th scope="col">Email</th>
                 <th scope="col">Register On</th>
                 <th scope="col">Actions</th>
@@ -89,11 +108,13 @@
             </thead>
             <tbody>
               <tr *ngFor="let user of users">
-                <th scope="row">1</th>
-                <td>{{user.name}}</td>
+                <th scope="row">{{user.id}}</th>
+                <td>{{user.first_Name}}</td>
+                <td>{{user.last_Name}}</td>
                 <td>{{user.email}}</td>
-                <td>{{user.registerdate| date}}</td>
-                <td>Edit</td>
+                <td>{{user.registationdate| date}}</td>
+                <td><i (click)="onedit(user)" class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                    <i (click)="ondeletebyid(user)"class="fa fa-trash" aria-hidden="true"></i></td>
               </tr>
               
             </tbody>
